--- a/.config.json
+++ b/.config.json
@@ -699,6 +699,18 @@
     }
    },
    "menu-menu-item-sidebar": true
+  },
+  "georgderflinger": {
+   "editor": {
+    "view": {
+     "view-grid-size": 20,
+     "view-node-status": true,
+     "view-node-show-label": true,
+     "view-show-tips": true,
+     "view-snap-grid": true,
+     "view-show-grid": true
+    }
+   }
   }
  }
 }
