--- a/projects/GEORGSHOME/package.json
+++ b/projects/GEORGSHOME/package.json
@@ -2,7 +2,9 @@
     "name": "GEORGSHOME",
     "description": "Ein Node-RED-Projekt",
     "version": "0.0.1",
-    "dependencies": {},
+    "dependencies": {
+        "node-red-dashboard": "2.15.3"
+    },
     "node-red": {
         "settings": {
             "flowFile": "flows.json",
