--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "description": "A Node-RED Project",
     "version": "0.0.1",
     "dependencies": {
+        "node-red-contrib-play-audio": "~2.3.2",
         "node-red-dashboard": "^2.15.3"
     }
 }
