--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
     "version": "0.0.1",
     "dependencies": {
         "node-red-contrib-play-audio": "~2.3.2",
-        "node-red-dashboard": "^2.15.3"
+        "node-red-dashboard": "~2.15.4"
     }
 }
