new trial project

--- a/.config.json
+++ b/.config.json
@@ -765,6 +765,9 @@
    },
    "GEORGSHOME": {
     "rootPath": ""
+   },
+   "TRIAL": {
+    "credentialSecret": false
    }
   },
   "activeProject": "ANDISHOME"
