--- a/.config.json
+++ b/.config.json
@@ -773,7 +773,7 @@
     }
    },
    "menu-menu-item-palette": true,
-   "menu-menu-item-sidebar": false
+   "menu-menu-item-sidebar": true
   }
  },
  "projects": {
