--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "node-red-contrib-bigtimer": "~2.1.9",
         "node-red-contrib-eztimer": "~1.1.1",
+        "node-red-contrib-mytimeout": "~3.2.0",
         "node-red-contrib-play-audio": "~2.3.2",
         "node-red-contrib-simple-gate": "~0.2.3",
         "node-red-dashboard": "~2.15.4"
