--- a/.config.json
+++ b/.config.json
@@ -707,6 +707,9 @@
      "view-show-tips": false,
      "view-snap-grid": true,
      "view-show-grid": true
+    },
+    "context": {
+     "flowRefresh": false
     }
    },
    "git": {
