--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "node-red-contrib-mytimeout": "~3.2.0",
         "node-red-contrib-play-audio": "~2.3.2",
         "node-red-contrib-simple-gate": "~0.2.3",
-        "node-red-dashboard": "~2.15.4"
+        "node-red-dashboard": "~2.15.4",
+        "phidget22": "^2.5.1"
     }
 }
