--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "node-red-contrib-bigtimer": "~2.1.9",
         "node-red-contrib-chatbot": "~0.18.3",
         "node-red-contrib-eztimer": "~1.1.1",
+        "node-red-contrib-finite-statemachine": "~0.2.10",
         "node-red-contrib-flow-asserter": "~0.4.0",
         "node-red-contrib-function-npm": "~0.3.0",
         "node-red-contrib-mytimeout": "~3.2.0",
