statemachine for garage door

--- a/.config.json
+++ b/.config.json
@@ -1411,7 +1411,7 @@
     }
    },
    "menu-menu-item-palette": true,
-   "menu-menu-item-sidebar": true
+   "menu-menu-item-sidebar": false
   }
  },
  "projects": {
