--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "node-red-contrib-mytimeout": "~3.2.0",
         "node-red-contrib-play-audio": "~2.3.2",
         "node-red-contrib-simple-gate": "~0.2.3",
+        "node-red-contrib-simpletime": "~2.8.1",
         "node-red-contrib-telegrambot": "~7.1.1",
         "node-red-dashboard": "~2.15.4",
         "phidget22": "^2.5.1"
