--- a/.config.json
+++ b/.config.json
@@ -1066,7 +1066,7 @@
   },
   "node-red-contrib-bigtimer": {
    "name": "node-red-contrib-bigtimer",
-   "version": "2.1.9",
+   "version": "2.2.6",
    "local": true,
    "nodes": {
     "bigtimer": {
@@ -1391,7 +1391,7 @@
   "node-red-contrib-simpletime": {
    "name": "node-red-contrib-simpletime",
    "version": "2.8.1",
-   "local": false,
+   "local": true,
    "nodes": {
     "simpletime": {
      "name": "simpletime",
@@ -1419,12 +1419,13 @@
     "view": {
      "view-show-grid": true,
      "view-snap-grid": true,
-     "view-grid-size": 20,
+     "view-grid-size": "20",
      "view-node-status": true,
      "view-node-show-label": true,
      "view-show-tips": true
     }
-   }
+   },
+   "menu-menu-item-sidebar": true
   }
  },
  "projects": {
