--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ queue.sqlite
 queue.sqlite
 /.config.json
 /projects/ANDISHOME/.AndisHome.json.backup
+/.flows_GEORGLAPTOP.json.backup
+/.flows_WIN-04L2L9UMOVJ.json.backup
+/windows-service.js
+/flows_GEORGLAPTOP.json
