with phidgets nodes

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ queue.sqlite
 /.flows_WIN-04L2L9UMOVJ.json.backup
 /windows-service.js
 /flows_GEORGLAPTOP.json
+/projects/ANDISHOME/AndisHome_cred.json
