work on heatercontrol - all heaters on / off, trial phidgets with interface kit 16/16

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ queue.sqlite
 /windows-service.js
 /flows_GEORGLAPTOP.json
 /projects/ANDISHOME/AndisHome_cred.json
+/projects/TRIAL/Trialflow_cred.json
