--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "node-red-contrib-assert": "~1.3.2",
         "node-red-contrib-bigtimer": "~2.2.6",
+        "node-red-contrib-boolean-logic-ultimate": "~1.0.20",
         "node-red-contrib-chatbot": "~0.18.3",
         "node-red-contrib-eztimer": "~1.1.1",
         "node-red-contrib-finite-statemachine": "~1.0.4",
