--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ queue.sqlite
 /flows_GEORGLAPTOP.json
 /projects/ANDISHOME/AndisHome_cred.json
 /projects/TRIAL/Trialflow_cred.json
+/package-lock.json
