--- a/package.json
+++ b/package.json
@@ -2,22 +2,5 @@
     "name": "node-red-project",
     "description": "A Node-RED Project",
     "version": "0.0.1",
-    "dependencies": {
-        "node-red-contrib-assert": "~1.3.2",
-        "node-red-contrib-bigtimer": "~2.2.6",
-        "node-red-contrib-boolean-logic-ultimate": "~1.0.20",
-        "node-red-contrib-chatbot": "~0.18.3",
-        "node-red-contrib-finite-statemachine": "~1.0.4",
-        "node-red-contrib-function-npm": "~0.3.0",
-        "node-red-contrib-music": "~1.3.5",
-        "node-red-contrib-mytimeout": "~3.2.0",
-        "node-red-contrib-osc": "~1.1.0",
-        "node-red-contrib-phidget22": "~1.0.3",
-        "node-red-contrib-play-audio": "~2.5.0",
-        "node-red-contrib-simple-gate": "~0.3.1",
-        "node-red-contrib-simpletime": "~2.8.1",
-        "node-red-contrib-telegrambot": "~7.1.1",
-        "node-red-dashboard": "~2.23.3",
-        "phidget22": "^2.5.1"
-    }
+    "private": true
 }
