--- a/.config.users.json
+++ b/.config.users.json
@@ -16,7 +16,7 @@
                 "email": "georgderflinger@gmail.com"
             },
             "workflow": {
-                "mode": "auto"
+                "mode": "manual"
             }
         }
     }
