--- a/package.json
+++ b/package.json
@@ -2,5 +2,19 @@
     "name": "node-red-project",
     "description": "A Node-RED Project",
     "version": "0.0.1",
-    "private": true
+    "private": true,
+    "dependencies": {
+        "node-red-contrib-assert": "~1.3.2",
+        "node-red-contrib-bigtimer": "~2.6.3",
+        "node-red-contrib-boolean-logic-ultimate": "~1.0.23",
+        "node-red-contrib-chatbot": "~0.18.3",
+        "node-red-contrib-finite-statemachine": "~1.0.4",
+        "node-red-contrib-flow-asserter": "~0.4.0",
+        "node-red-contrib-music": "~1.3.5",
+        "node-red-contrib-persist": "~1.0.4",
+        "node-red-contrib-simple-gate": "~0.3.1",
+        "node-red-contrib-simpletime": "~2.8.1",
+        "node-red-contrib-telegrambot": "~7.1.1",
+        "node-red-dashboard": "~2.24.2"
+    }
 }
