--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "node-red-contrib-boolean-logic-ultimate": "~1.0.23",
         "node-red-contrib-calc": "~1.0.5",
         "node-red-contrib-chatbot": "~0.18.3",
+        "node-red-contrib-config": "~1.2.1",
         "node-red-contrib-curve": "~1.0.1",
         "node-red-contrib-finite-statemachine": "~1.0.4",
         "node-red-contrib-flow-asserter": "~0.4.0",
