--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "version": "0.0.1",
     "private": true,
     "dependencies": {
+        "node-red-contrib-actionflows": "~2.0.3",
         "node-red-contrib-assert": "~1.3.2",
         "node-red-contrib-bigtimer": "~2.6.3",
         "node-red-contrib-blockly": "~1.1.0",
@@ -16,6 +17,7 @@
         "node-red-contrib-flow-asserter": "~0.4.0",
         "node-red-contrib-music": "~1.3.5",
         "node-red-contrib-persist": "~1.0.4",
+        "node-red-contrib-publishflows": "0.0.2",
         "node-red-contrib-simple-gate": "~0.3.1",
         "node-red-contrib-simpletime": "~2.8.1",
         "node-red-contrib-telegrambot": "~7.1.1",
